--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
         <h1>Gerenciador de Magias D&D 5E</h1>
     </header>
     <main>
+        <section id="profile-section">
+            <h2>Perfil</h2>
+            <form id="profile-form">
+                <label for="profile-name">Nome do Perfil:</label>
+                <input type="text" id="profile-name" required>
+                <button type="submit">Criar Perfil</button>
+            </form>
+            <label for="profile-select">Selecionar Perfil:</label>
+            <select id="profile-select"></select>
+            <button id="delete-profile-btn">Excluir Perfil</button>
+        </section>
         <section id="add-spell">
             <h2>Adicionar Magia</h2>
             <form id="spell-form">
